[metadata]
name = SolyticsUtils
version = 0.0.1
description = Common authentication and authorization gateway
long_description = file: README.md
url = https://github.com/mayurfegde/django-keycloak.git
author = Mayur Fegde
author_email = mayur.fegde@solytics-partners.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    requests==2.25.1